--- a/styles/style.css
+++ b/styles/style.css
@@ -2,30 +2,54 @@
 
 .main {
    gap: 1em;
-   display: flex-end;
+   display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
+   flex-shrink: 1;
+   align-items: center;
 }
 
 .ytv {
+   display: flex;
+   flex-wrap: wrap;
+   gap: 1em;
     
 }
 .ytv__bottom {
-    
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
 }
 .ytv__left {
-    
+    display: flex;
+    align-items: center;
+    gap: 1em;
 }
 .ytv__right {
+   display: flex;
+   justify-content: flex-end;
+   flex-grow: 1;
+   gap: 1em;
     
 }
 .profile {
-    
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 1em;
 }
 .profile__text {
-    
+   display: flex;
+   gap: 1em;
+   flex-direction: column;
 }
 .icon {
 
 }
 .btn--flex {
-    
+
 }
+
